# Translate_bot

./: .gitignore  README.md  main.py  mixed_present.py  ovoz_bot.db  present_continuous.py  present_perfect.py  present_simple.py  pyproject.toml  requirements.txt
audios/: Ubaydulla.m4a
