#[project]
#name = "telegram-translet-bot"
#version = "0.1.0"
#description = "Add your description here"
#requires-python = ">=3.13"
#dependencies = [
#    "aiogram>=3.25.0",
#    "deep-translator>=1.11.4",
#    "discord>=2.3.2",
#    "discord-py>=2.7.1",
#    "dotenv>=0.9.9",
#    "googletrans>=4.0.2",
#    "gtts>=2.5.4",
#    "pip>=26.0.1",
#    "pynacl>=1.6.2",
#    "pypdf2>=3.0.1",
#    "python-dotenv>=1.2.1",
#    "python-telegram-bot>=22.6",
#    "simpleeval>=1.0.3",
#    "telethon>=1.42.0",
#    "transformers>=5.2.0",
#    "yt-dlp>=2026.3.3",
#]
